--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "resolve-typescript-plugin": "^2.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
