--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@aztec/circuits.js": "^0.8.14",
     "@aztec/foundation": "^0.8.14",
     "@aztec/types": "^0.8.14",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "classnames": "^2.3.2",
     "formik": "^2.4.3",
     "node-sass": "^9.0.0",
