--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "@aztec/circuits.js": "^0.8.14",
     "@aztec/foundation": "^0.8.14",
     "@aztec/types": "^0.8.14",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@tanstack/eslint-plugin-query": "^5.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "classnames": "^2.3.2",
     "formik": "^2.4.3",
     "node-sass": "^9.0.0",
@@ -74,6 +78,7 @@
     "resolve-typescript-plugin": "^2.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
