--- a/src/contracts/Nargo.toml
+++ b/src/contracts/Nargo.toml
@@ -5,7 +5,7 @@ compiler_version = "0.1"
 type = "contract"
 
 [dependencies]
-aztec = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.8.14", directory="yarn-project/aztec-nr/aztec" }
-value_note = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.8.14", directory="yarn-project/aztec-nr/value_note" }
-safe_math = { path = "../../../../aztec-nr/safe-math" }
-authwit = { path = "../../../../aztec-nr/authwit" }
+aztec = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.9.0", directory="yarn-project/aztec-nr/aztec" }
+value_note = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.9.0", directory="yarn-project/aztec-nr/value-note" }
+safe_math = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.9.0", directory="yarn-project/aztec-nr/safe-math" }
+authwit = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.9.0", directory="yarn-project/aztec-nr/authwit" }
