--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
       - name: Build webpack
         run: |
           yarn build
