--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
+          yarn-version: 3.6.3
       - name: Build webpack
         run: |
           yarn build
