Set yarn version in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "./dest/index.js",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
+    "yarn": ">=3.6.3"
   },
   "scripts": {
     "build": "yarn clean && tsc -b && webpack",
