--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           corepack enable
           yarn set version stable
+      - name: Install depdendencies
+        run: yarn install
       - name: Build webpack
-        run: |
-          yarn build
+        run: yarn build
