Add webpack to GitHub actions (#7)
* Add webpack to CI

* Add node version to package.json/engines

* Add missing dev dependency: postcss-import

--- a/.github/workflows/nargo.yml
+++ b/.github/workflows/nargo.yml
@@ -10,18 +10,18 @@ on:
 
 jobs:
 
-  build:
+  nargo:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3    
-      - name: Install nargo 
+      - uses: actions/checkout@v3
+      - name: Install nargo
         run: |
           curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash
           export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
           noirup -v 0.16.0-aztec.1
 
-      - name: Run check
+      - name: Run nargo check
         run: |
           export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
           cd src/contracts
