--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "./dest/index.js",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
+    "yarn": ">=3.6.3"
   },
   "scripts": {
     "build": "yarn clean && tsc -b && webpack",
@@ -73,6 +74,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.6.4",
     "postcss": "^8.4.29",
+    "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "prettier": "^3.0.3",
     "resolve-typescript-plugin": "^2.0.1",
