--- a/.github/workflows/nargo.yml
+++ b/.github/workflows/nargo.yml
@@ -26,3 +26,4 @@ jobs:
           export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
           cd src/contracts
           nargo check
+          nargo test
