--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
 
-  webpack:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,10 +18,20 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
+      - name: Install nargo
+        run: |
+          curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash
+          export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
+          noirup -v 0.16.0-aztec.1
+      - name: Run nargo tests
+        run: |
+          export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
+          cd src/contracts
+          nargo test
       - name: Install yarn 3
         run: |
           corepack enable
-          yarn set version stable
+          yarn set version 3.x
       - name: Install depdendencies
         run: yarn install
       - name: Build webpack
