--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install yarn 3
         run: |
           corepack enable
-          yarn set version 3.x
+          yarn set version 3.6.3
       - name: Install depdendencies
         run: yarn install
       - name: Build webpack
