--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "main": "./dest/index.js",
   "engines": {
     "node": ">=20.0.0",
-    "yarn": ">=3.6.3"
+    "yarn": ">=yarn@4.0.0"
   },
   "scripts": {
     "build": "yarn clean && tsc -b && webpack",
     "install:noir": "curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash noirup -v 0.16.0-aztec.1",
-    "install:sandbox": "docker pull aztecprotocol/aztec-sandbox:0.8.14",
+    "install:sandbox": "docker pull aztecprotocol/aztec-sandbox:0.9.0",
     "clean": "rm -rf ./dest .tsbuildinfo",
     "start": "serve -p 3000 ./dest",
     "start:dev": "webpack serve --mode=development",
-    "start:sandbox": "SANDBOX_VERSION=0.8.14 /bin/bash -c \"$(curl -fsSL 'https://sandbox.aztec.network')\" ",
+    "start:sandbox": "SANDBOX_VERSION=0.9.0 /bin/bash -c \"$(curl -fsSL 'https://sandbox.aztec.network')\" ",
     "formatting": "prettier --check ./src && eslint ./src",
     "formatting:fix": "prettier -w ./src",
     "compile": "aztec-cli compile src/contracts --outdir ../artifacts --typescript ../artifacts",
+    "update:sandbox": "/bin/bash -c \"$(curl -fsSL 'https://sandbox.aztec.network')\"",
     "test:integration": "NODE_NO_WARNINGS=1 node --experimental-vm-modules $(yarn bin jest) --runInBand"
   },
   "jest": {
@@ -39,10 +40,10 @@
   },
   "dependencies": {
     "@aztec/aztec-ui": "^0.1.14",
-    "@aztec/aztec.js": "^0.8.14",
-    "@aztec/circuits.js": "^0.8.14",
-    "@aztec/foundation": "^0.8.14",
-    "@aztec/types": "^0.8.14",
+    "@aztec/aztec.js": "^0.9.0",
+    "@aztec/circuits.js": "^0.9.0",
+    "@aztec/foundation": "^0.9.0",
+    "@aztec/types": "^0.9.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tanstack/eslint-plugin-query": "^5.0.0",
@@ -108,5 +109,6 @@
     "src",
     "!*.test.*"
   ],
-  "types": "./dest/index.d.ts"
+  "types": "./dest/index.d.ts",
+  "packageManager": "yarn@4.0.0"
 }
