--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@heroicons/react": "^2.0.18",
     "@tanstack/eslint-plugin-query": "^5.0.0",
     "@tanstack/react-query": "^5.0.0",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "formik": "^2.4.3",
     "node-sass": "^9.0.0",
