--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,16 @@ jobs:
           curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash
           export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
           noirup -v 0.16.0-aztec.1
-      - name: Run nargo tests
+      - name: Run token contract tests
         run: |
           export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
-          cd src/contracts
+          cd src/contracts/token
+          nargo test
+      - name: Run webauthn prove test
+        run: |
+          export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
+          cd src/contracts/webauthn
+          nargo check
           nargo test
       - name: Install yarn 4
         run: |
