--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tanstack/eslint-plugin-query": "^5.0.0",
     "@tanstack/react-query": "^5.0.0",
     "buffer": "^6.0.3",
+    "cbor-x": "^1.5.4",
     "classnames": "^2.3.2",
     "formik": "^2.4.3",
     "node-sass": "^9.0.0",
