Install deps before building

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
+      - name: Install yarn
+        run: |
+          corepack enable
+          yarn set version latest
+      - name: Install depdendencies
+        run: |
+          yarn --version
+          yarn install
       - name: Install nargo
         run: |
           curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash
@@ -27,13 +35,5 @@ jobs:
         run: |
           export PATH="$PATH:/home/runner/.nargo/bin:.nargo/bin/nargo"
           yarn compile
-      - name: Install yarn 4
-        run: |
-          corepack enable
-          yarn set version latest
-      - name: Install depdendencies
-        run: |
-          yarn --version
-          yarn install
       - name: Build webpack
         run: yarn build
