Install Aztec cli

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
         run: |
           yarn --version
           yarn install
+      - name: Install aztec-cli
+        run: |
+          yarn global add @aztec/cli
       - name: Install nargo
         run: |
           curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash
