--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@aztec/aztec.js": "^0.11.1",
     "@aztec/circuits.js": "^0.11.1",
     "@aztec/foundation": "^0.11.1",
+    "@aztec/noir-contracts": "^0.11.1",
     "@aztec/types": "^0.11.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
