--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "buffer": "^6.0.3",
     "cbor-x": "^1.5.4",
     "classnames": "^2.3.2",
+    "eslint-config-prettier": "^9.0.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
