--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start:dev": "webpack serve --mode=development",
     "start:sandbox": "SANDBOX_VERSION=0.11.1 /bin/bash -c \"$(curl -fsSL 'https://sandbox.aztec.network')\" ",
     "formatting": "prettier --check ./src && eslint ./src",
-    "formatting:fix": "prettier -w ./src",
+    "formatting:fix": "prettier -w ./src && eslint --fix ./src",
     "compile": "aztec-cli compile src/contracts/webauthn_account_contract --outdir ../../artifacts --typescript ../../artifacts",
     "update:sandbox": "/bin/bash -c \"$(curl -fsSL 'https://sandbox.aztec.network')\"",
     "test:integration": "NODE_NO_WARNINGS=1 node --experimental-vm-modules $(yarn bin jest) --runInBand"
