--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.6.4",
+    "@noble/curves": "^1.2.0",
+    "@noble/hashes": "^1.3.2",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
